--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,51 @@
 asn1crypto==1.5.1
-async-generator==1.10
-attrs==22.1.0
+beautifulsoup4==4.9.1
 boto3==1.24.70
 botocore==1.27.70
-certifi @ file:///C:/Windows/TEMP/abs_e9b7158a-aa56-4a5b-87b6-c00d295b01fanefpc8_o/croots/recipe/certifi_1655968940823/work/certifi
+bs4==0.0.1
+certifi==2020.6.20
 cffi==1.15.1
+chardet==3.0.4
 charset-normalizer==2.1.1
-click==8.1.3
+click==7.1.2
 colorama==0.4.5
+configparser==5.3.0
 cramjam==2.5.0
 cryptography==36.0.2
 dnspython==2.2.1
-fastparquet==0.8.3
+fastparquet==0.8.1
 filelock==3.8.0
-Flask==2.2.2
-Flask-Cors==3.0.10
+Flask==1.1.2
+Flask-Cors==3.0.9
 fsspec==2022.8.2
-h11==0.13.0
-idna==3.3
-importlib-metadata==4.12.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
+gunicorn==20.0.4
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
 jmespath==1.0.1
-MarkupSafe==2.1.1
-numpy==1.23.3
+MarkupSafe==1.1.1
+numpy==1.21.6
 oscrypto==1.3.0
-outcome==1.2.0
-packaging==21.3
-pandas==1.4.4
-pyarrow==9.0.0
+pandas==1.3.5
+pyarrow==8.0.0
 pycparser==2.21
 pycryptodomex==3.15.0
 PyJWT==2.4.0
 pymongo==4.2.0
 pyOpenSSL==22.0.0
-pyparsing==3.0.9
-PySocks==1.7.1
 python-dateutil==2.8.2
+python-dotenv==0.21.0
 pytube==12.1.0
 pytz==2022.2.1
-requests==2.28.1
+requests==2.24.0
 s3transfer==0.6.0
-selenium==4.4.3
-six==1.16.0
-sniffio==1.3.0
+selenium==3.141.0
+six==1.15.0
 snowflake-connector-python==2.7.12
-sortedcontainers==2.4.0
-trio==0.21.0
-trio-websocket==0.9.2
+soupsieve==2.0.1
+tqdm==4.64.1
 typing_extensions==4.3.0
-urllib3==1.26.12
-Werkzeug==2.2.2
+urllib3==1.25.10
+webdriver-manager==3.8.3
+Werkzeug==1.0.1
 wincertstore==0.2
-wsproto==1.2.0
-zipp==3.8.1
